--- a/troppotardi/public/index.html
+++ b/troppotardi/public/index.html
@@ -1,1 +1,14 @@
-ciao
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+  "http://www.w3.org/TR/html4/strict.dtd"> 
+<html> 
+<head> 
+  <title>troppo tardi</title> 
+  <link href="/css/home.css" media="screen" rel="stylesheet" type="text/css" /> 
+</head> 
+<body> 
+  <a href="/images/last"> 
+    <img src="/layout_images/logo.png" alt="troppotardi" /> 
+  </a> 
+</div> 
+</body> 
+</html> 
