--- a/troppotardi/public/index.html
+++ b/troppotardi/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
-<html> 
+<html xmlns="http://www.w3.org/1999/xhtml"> 
 <head> 
-  <title>troppo tardi</title> 
-  <link href="/css/home.css" media="screen" rel="stylesheet" type="text/css" /> 
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
+    <title>troppo tardi</title> 
+    <link href="/css/home.css" media="screen" rel="stylesheet" type="text/css" /> 
 </head> 
 <body> 
     <a href="/images/last"> 
